# World-Name-Classifier-using-RNN

./: .env  .gitignore  config.yaml  params.yaml  pyproject.toml  rnn.py  setup.py  utils.py
artifacts/models/: state_dict.pth
src/: extra.py  predict.py  rnn.py  train.py  trainer.py  utils.py
src.egg-info/: PKG-INFO
